Si no hay planes no sale como opcion

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -194,6 +194,8 @@
                                    <option>{{plan}}</option>
                                    {% endfor %}
                                </select>
+                            {% else %}
+                                <input type="hidden" name="planes" value="">
                            {% endif %}
                         {% else %}
                             <input type="hidden" name="planes" value="">
