--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
@@ -74,7 +74,7 @@
             {% if elegida == 1 %}
             <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 1 - ELEGIDA</strong></h4></div>
             <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42 margin-left: 1cm;'>
+                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 1</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -148,7 +148,7 @@
             {% if elegida == 2 %}
             <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 2 - ELEGIDA</strong></h4></div>
             <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42 margin-left: 1cm;'>
+                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 2</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -224,7 +224,7 @@
             {% if elegida == 3 %}
             <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 3 - ELEGIDA</strong></h4></div>
             <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42 margin-left: 1cm;'>
+                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 3</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -298,7 +298,7 @@
             {% if elegida == 4 %}
             <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 4 - ELEGIDA</strong></h4></div>
             <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42 margin-left: 1cm;'>
+                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 4</strong></h4></div>
             <div id="panel-body" class='panel-body'>
