Agregado plan a email del cliente

--- a/cotizador_acerta/templates/cotizar/email.html
+++ b/cotizador_acerta/templates/cotizar/email.html
@@ -426,6 +426,12 @@
 							                        <td></td>
 							                        <td style="text-align: right;">{{ prima_endoso }}</td>
 							                      </tr>
+							                      <tr>
+                                                    <td style="text-align: left;">Plan</td>
+                                                    <td style="text-align: right;">{{ cotizacion.plan }}</td>
+                                                    <td></td>
+                                                    <td style="text-align: right;"></td>
+                                                  </tr>
 					                            </table>
 					                            <div class="text-right">
 					                            {% if tipo_pago == 'Contado' %}
