PDF de opciones, refactorizando.

--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
@@ -72,9 +72,9 @@
     <div class="col-md-3 col-xs-8" style="margin-left: 1cm;">
         <div class="panel panel-default border: 1px solid #E76C42;">
             {% if elegida == 1 %}
-            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 1 - ELEGIDA</strong></h4></div>
-            <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
+            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42;'><h4><strong>OPCIÓN 1 - ELEGIDA</strong></h4></div>
+            <div id="panel-body" class='panel-body'>
+                <table style='width:80%; background: #E76C42;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 1</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -146,9 +146,9 @@
     <div class="col-md-3 col-xs-8" style="margin-left: 1cm;">
         <div class="panel panel-default border: 1px solid #E76C42;">
             {% if elegida == 2 %}
-            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 2 - ELEGIDA</strong></h4></div>
-            <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
+            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42;'><h4><strong>OPCIÓN 2 - ELEGIDA</strong></h4></div>
+            <div id="panel-body" class='panel-body'>
+                <table style='width:80%; background: #E76C42;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 2</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -222,9 +222,9 @@
     <div class="col-md-3 col-xs-8" style="margin-left: 1cm;">
         <div class="panel panel-default border: 1px solid #E76C42;">
             {% if elegida == 3 %}
-            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 3 - ELEGIDA</strong></h4></div>
-            <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
+            <<div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42;'><h4><strong>OPCIÓN 3 - ELEGIDA</strong></h4></div>
+            <div id="panel-body" class='panel-body'>
+                <table style='width:80%; background: #E76C42;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 3</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -296,9 +296,9 @@
     <div class="col-md-3 col-xs-8" style="margin-left: 1cm;">
         <div class="panel panel-default border: 1px solid #E76C42;">
             {% if elegida == 4 %}
-            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 4 - ELEGIDA</strong></h4></div>
-            <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
-                <table style='width:100%; background: #E76C42; margin-left: 1cm;'>
+            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42;'><h4><strong>OPCIÓN 4 - ELEGIDA</strong></h4></div>
+            <div id="panel-body" class='panel-body'>
+                <table style='width:80%; background: #E76C42;'>
             {% else %}
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 4</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -367,8 +367,6 @@
     </div>
   </div>
 
-  <br>.<br><br><br><br>
-
   <table style='width:100%; margin-left: 2cm;'>
 
         <tr>
@@ -387,8 +385,6 @@
         </tr>
 
     </table>
-
-  <br><br>.<br><br><br>
 
   <div class="col-md-3 col-xs-8" style="margin-left: 1cm;">
         <div class="panel panel-default border: 1px solid #E76C42;">
