--- a/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
+++ b/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
@@ -236,7 +236,7 @@
                                 <div class="col-md-12">
                                     <div class="col-md-3"></div>
                                     <div class="col-sm-4 col-md-6 text-center">
-                                        <button class="btn btn-lg button">
+                                        <button class="btn btn-lg button" onclick="window.open('{% url 'emitir' solicitud.pk %}')">
                                             Emitir póliza
                                         </button>
                                     </div>
