--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -190,6 +190,7 @@
                               <h3 id="subtitulo"><strong>Planes: </strong></h3>
                                <label for="planes">Seleccione el plan que corresponda: </label>
                                <select name="planes" class="form-control" id="planes">
+                                    <option selected disabled>---------</option>
                                    {% for plan in planes %}
                                    <option>{{plan}}</option>
                                    {% endfor %}
@@ -364,7 +365,6 @@
         $(".ced").addClass("hidden");
         $(".passp").addClass("hidden");
         $('#id_fecha_nacimiento').datepicker({
-            format: 'yyyy-mm-dd',
             language: 'es',
             todayHighlight: true,
             autoclose: true,
@@ -1304,7 +1304,7 @@
             $(".km-field").css('display','block');
         }
         $('#id_valor_text').maskMoney();
-        $('#id_fecha_nacimiento').mask('0000-00-00', {placeholder: "F. Nacimiento (aaaa-mm-dd)"});
+        $('#id_fecha_nacimiento').mask('00-00-0000', {placeholder: "F. Nacimiento (dd-mm-aaaa)"});
 
         $(document).click(function() {
             if($('#id_tipo_id_conductor_0').is(":checked")) {
