En los conductores adicionales: se pueden agregar tres conductores (dos son opcionales). Modificación del modelo, hacer migrate.

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -443,7 +443,7 @@
                                             {% bootstrap_field form.aseguradoConductor layout='horizontal' show_label=False field_class='form-field' %}
                                         </div>
                                         <div class="col-md-12">
-                                            Conductor:
+                                            Conductor(es):
                                         </div>
                                         <div class="col-md-12">
                                             <div class="col-md-6">
@@ -454,6 +454,28 @@
                                             </div>
                                             <div class="col-md-4">
                                                 {% bootstrap_field form.id_conductor layout='horizontal' show_label=False field_class='form-field' %}
+                                            </div>
+                                        </div>
+                                         <div class="col-md-12">
+                                            <div class="col-md-6">
+                                                {% bootstrap_field form.nombre_conductor2 layout='horizontal' show_label=False field_class='form-field' %}
+                                            </div>
+                                            <div class="col-md-2">
+                                                {% bootstrap_field form.tipo_id_conductor2 layout='horizontal' show_label=False field_class='form-field' %}
+                                            </div>
+                                            <div class="col-md-4">
+                                                {% bootstrap_field form.id_conductor2 layout='horizontal' show_label=False field_class='form-field' %}
+                                            </div>
+                                        </div>
+                                         <div class="col-md-12">
+                                            <div class="col-md-6">
+                                                {% bootstrap_field form.nombre_conductor3 layout='horizontal' show_label=False field_class='form-field' %}
+                                            </div>
+                                            <div class="col-md-2">
+                                                {% bootstrap_field form.tipo_id_conductor3 layout='horizontal' show_label=False field_class='form-field' %}
+                                            </div>
+                                            <div class="col-md-4">
+                                                {% bootstrap_field form.id_conductor3 layout='horizontal' show_label=False field_class='form-field' %}
                                             </div>
                                         </div>
                                     </div>
