Formato dd-mm-aaa en fecha nacimiento cotizacion

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -365,6 +365,7 @@
         $(".ced").addClass("hidden");
         $(".passp").addClass("hidden");
         $('#id_fecha_nacimiento').datepicker({
+            format:'dd-mm-yyyy',
             language: 'es',
             todayHighlight: true,
             autoclose: true,
